# IO_ESP32_PART

./: .cproject  .project  CMakeLists.txt  sdkconfig  sdkconfig.old
components/esp32-wifi-manager/src/: code.js  http_app.c  index.html  style.css  wifi_manager.c  wifi_manager.h
components/modbus-rtu/: CMakeLists.txt  modbus-rtu.c
components/modbus-rtu/include/: modbus-rtu-map.h  modbus-rtu.h
components/modbus-tcp/: CMakeLists.txt  modbus-tcp-map.c  modbus-tcp.c
components/modbus-tcp/include/: modbus-tcp-map.h  modbus-tcp.h
components/wifi-process/: CMakeLists.txt  wifi-process.c
components/wifi-process/include/: wifi-process.h
docs/: IO_Flowchart.drawio  esp_32_bridge_planning -2.md  modbus-tcp-map.md  system-architecture.md
main/: CMakeLists.txt  app_events.h  main.c
